--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     function showEducation() {
         alert('این بخش در حال توسعه است');
     }
+body {
+    background-image: url('1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
     function showImages() {
         var imagesDiv = document.querySelector('.images');
@@ -22,7 +27,7 @@
        if (!bioShown) {
             var resumeDiv = document.querySelector('.resume');
             resumeDiv.style.display = 'block';
-            bioShown = true;
+            bioShown = false;
         }
         }
 
