--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <html lang="fa"> <head> <meta charset="UTF-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>رضا بهره مند خیرآبادی</title> <style> body{
-            background-image: url('5ff947553b451.jpg'), url('1.jpg');
+            background-image: url('5ff947553b451.jpg'), url('5ff947553b451.jpg');
             background-size:cover , cover;
             background-position: left top, right top;
             background-repeat: no-repeat, no-repeat;
